# TensorWrapper

./: .buildinfo  .gitignore  .licenserc.yaml  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  terminology.html
.github/: .licenserc.yaml  enable_sigma.cmake
.github/Dockerfile/: base-cblas.Dockerfile  base-eigen3.Dockerfile  base-lapacke.Dockerfile  base-openblas.Dockerfile  base-openmpi.Dockerfile  base-scalapack.Dockerfile  base-tiledarray.Dockerfile
.github/actions/container-build_test_release/: action.yaml  entrypoint.sh
.github/workflows/: build_base.yaml  build_test_release-manual.yaml  build_test_release.yaml  c-cpp.yaml  deploy_docs.yaml  merge.yaml  nightly.yaml  pull_request.yaml  tag_and_release.yaml  test_docs.yaml
_sources/: index.rst.txt
_sources/background/: index.rst.txt  other_choices.rst.txt  permutation.rst.txt  terminology.rst.txt
_sources/developer/: adding_operations_to_contiguous.rst.txt  index.rst.txt
_sources/developer/design/: allocator.rst.txt  creation.rst.txt  expression.rst.txt  index.rst.txt  layout.rst.txt  motivation.rst.txt  op_graph.rst.txt  overview.rst.txt  shape.rst.txt  sparsity.rst.txt  symmetry.rst.txt
background/: einstein_summation_convention.html  index.html  key_features.html  logical_v_physical.html  nested_tensors.html  other_choices.html  permutation.html  terminology.html
bibliography/: bibliography.html
cmake/: FindcuTENSOR.cmake  config.hpp.in  nwx_python_mods.cmake
developer/: adding_operations_to_contiguous.html  index.html
developer/design/: allocator.html  buffer.html  considerations.html  creation.html  distribution.html  expression.html  index.html  layout.html  motivation.html  op_graph.html  overview.html  relationships.html  shape.html  shapev1.html  sparse_maps.html  sparsity.html  symmetry.html  tensor_stack.html  tensor_wrapper.html
docs/: Makefile
docs/source/: conf.py  index.rst  other_choices.rst  terminology.rst
docs/source/background/: einstein_summation_convention.rst  index.rst  key_features.rst  logical_v_physical.rst  nested_tensors.rst  other_choices.rst  permutation.rst  terminology.rst
docs/source/bibliography/: background.bib  other_libraries.bib
docs/source/developer/: index.rst
include/tensorwrapper/: forward_declarations.hpp  tensorwrapper.hpp
include/tensorwrapper/allocator/: allocator.hpp  allocator_base.hpp  allocator_fwd.hpp  contiguous.hpp  eigen.hpp  local.hpp  replicated.hpp
include/tensorwrapper/backends/: backends.hpp  eigen.hpp
include/tensorwrapper/buffer/: buffer.hpp  buffer_base.hpp  buffer_base_common.hpp  buffer_fwd.hpp  buffer_view_base.hpp  contiguous.hpp  eigen.hpp  eigen_any.hpp  local.hpp  mdbuffer.hpp  replicated.hpp  replicated_common.hpp  replicated_view.hpp
include/tensorwrapper/concepts/: floating_point.hpp  has_begin_end.hpp
include/tensorwrapper/detail_/: detail_.hpp  dsl_base.hpp  dsl_base.ipp  hashing.hpp  integer_utilities.hpp  polymorphic_base.hpp  unique_ptr_utilities.hpp  view_traits.hpp
include/tensorwrapper/diis/: diis.hpp
include/tensorwrapper/dsl/: dsl.hpp  dsl_forward.hpp  dummy_indices.hpp  labeled.hpp  pairwise_parser.hpp  parser.hpp
include/tensorwrapper/floating_point/: enums.hpp  floating_point.hpp  types.hpp
sparse_maps/: background.html  design.html  from_sparse_map.html  index.html
src/python/: export_tensorwrapper.hpp  module.cpp
src/tensorwrapper/diis/: diis.cpp
tensorwrapper_cxx_api/: _formulas.tex  _formulas_dark.tex  add_8hpp_source.html  add__noise_8hpp_source.html  add__op_8hpp_source.html  addition__visitor_8hpp_source.html  allclose_8hpp_source.html  allocator_2contiguous_8hpp_source.html  allocator_2eigen_8hpp_source.html  allocator_2local_8hpp_source.html  allocator_2replicated_8hpp_source.html  allocator_2tiled__array_8hpp_source.html  allocator_8hpp_source.html  allocator__base_8hpp_source.html  allocator__class_8hpp_source.html  allocator__fwd_8hpp_source.html  allocators_2allocator_8hpp_source.html  allocators_2allocators_8hpp_source.html  allocators_2tiled__array_8hpp_source.html  allocators_8hpp_source.html  annotated.html  apply__elementwise_8hpp_source.html  approximately__equal_8hpp_source.html  backends_2eigen_8hpp_source.html  backends_8hpp_source.html  binary__operation__visitor_8hpp_source.html  block__diagonal__matrix_8hpp_source.html  block__kernel_8hpp_source.html  buffer_2contiguous_8hpp_source.html  buffer_2detail___2eigen__tensor_8hpp_source.html  buffer_2eigen_8hpp_source.html  buffer_2local_8hpp_source.html  buffer_2replicated_8hpp_source.html  buffer_8hpp_source.html  buffer__base_8hpp_source.html  buffer__base__common_8hpp_source.html  buffer__fwd_8hpp_source.html  buffer__pimpl_8hpp_source.html  buffer__traits_8hpp_source.html  buffer__view__base_8hpp_source.html  (+1272 more)
tensorwrapper_cxx_api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  enums_0.js  enumvalues_0.js  (+53 more)
tests/: test_main.cpp
tests/diis/: diis.cpp
tests/performance_tests/: add.cpp  mult.cpp  performance_tests.hpp  tw_vs_ta.cpp
tests/sparse_map/: from_sparse_map.cpp  index.cpp  make_pair_map.cpp  reduce_tot.cpp  sparse_map.cpp  test_sparse_map.hpp
tests/ta_helpers/: direct_tile.cpp  get_block_idx.cpp  is_tile_bound.cpp  lazy_tile.cpp  linalg_inner_tensors.cpp  pow.cpp  remove_redundancy.cpp  retile.cpp  slice.cpp  submatrix_functions.cpp  ta_hashers.cpp  ta_helpers.cpp  ta_tile_evaluator.cpp
tests/tensor/: approximately_equal.cpp  are_approximately_equal.cpp  conversions.cpp  creation.cpp  linear_algebra.cpp  remove_redundancy.cpp  scalar_tensor_wrapper.cpp  tensor_tensor_wrapper.cpp  test_tensor.hpp
tests/testing/: random_tensor_generator.hpp
(+629 files in other folders)
